test/expected/v20/simple-fs-read.txt
/scripts/simple-fs-read.js:10
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-fs-read.js:r:c)
    at FSReqCallback.readFileAfterClose [as oncomplete] (node:internal/fs/read/context:r:c)
    at FSReqCallback.callbackTrampoline (node:internal/async_hooks:r:c)
    at FSReqCallback.emitInitNative (node:internal/async_hooks:r:c)
    at ReadFileContext.close (node:internal/fs/read/context:r:c)
    at FSReqCallback.readFileAfterRead [as oncomplete] (node:internal/fs/read/context:r:c)
    at FSReqCallback.callbackTrampoline (node:internal/async_hooks:r:c)
    at FSReqCallback.emitInitNative (node:internal/async_hooks:r:c)
    at ReadFileContext.read (node:internal/fs/read/context:r:c)
    at FSReqCallback.readFileAfterStat [as oncomplete] (node:fs:r:c)
    at FSReqCallback.callbackTrampoline (node:internal/async_hooks:r:c)
    at FSReqCallback.emitInitNative (node:internal/async_hooks:r:c)
    at FSReqCallback.readFileAfterOpen [as oncomplete] (node:fs:r:c)
    at FSReqCallback.callbackTrampoline (node:internal/async_hooks:r:c)
    at FSReqCallback.emitInitNative (node:internal/async_hooks:r:c)
    at Object.readFile (node:fs:r:c)
    at Object.<anonymous> (/scripts/simple-fs-read.js:r:c)
    at Module._compile (node:internal/modules/cjs/loader:r:c)
    at Module._extensions..js (node:internal/modules/cjs/loader:r:c)
    at Module.load (node:internal/modules/cjs/loader:r:c)
    at Module._load (node:internal/modules/cjs/loader:r:c)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:r:c)
    at node:internal/main/run_main_module:r:c {
  [Symbol(originalCallSite)]: [ CallSite {}, CallSite {}, CallSite {} ],
  [Symbol(mutatedCallSite)]: [
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}
  ]
}

Node.js v20.15.1
